# TwitterToy

./: .env  .gitignore  README.md  __config__.py  __version__.py  auth.py  main.py  pyproject.toml  requirements.txt  start.sh  tokens.py
database/: __init__.py  ddoi.db
src/: apitokens.py  fetch.py  tweet.py  utils.py
utils/: __init__.py  db.py  fetch.py  logger.py  misc.py
