# Package installer configuration (used by repl.it)
[tool]
[tool.poetry]
authors = ["pyplacca <dhegreatprosperity10@gmail.com>"]
description = "A friendly bot that tweets inspirational quotes"
name = "twitter-toy"
version = "1.0.0"
[tool.poetry.dependencies]
PySocks = "1.7.1"
aiofiles = "0.4.0"
certifi = "2020.12.5"
chardet = "4.0.0"
decouple = "0.0.7"
idna = "2.10"
oauthlib = "3.1.0"
python = "^3.7"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
six = "1.15.0"
tweepy = "3.10.0"
urllib3 = "1.26.2"
